# Calculator

./: CMakeLists.txt  main.c
include/: button.h  calc.h  ui.h
src/: button.c  calc.c  main.c  ui.c
tests/: UnityTests.c
